Corrige conexion desktop-API: reseed BD, fix AuditLog/AccionAuditoria, logging SLF4J
Problemas resueltos:
- Mismatch credenciales PG: creado api/.env.local (ignorado por gitignore)
- cargo CHECK constraint usaba valores en castellano; V5 migracion los alinea con enum Java (SPECIALIST/NURSE)
- AccionAuditoria enum no coincidia con CHECK de audit_log; actualizado a LOGIN/CREATE/READ/UPDATE/SOFT_DELETE/etc
- AuditLog.id_audit era Long+SEQUENCE pero BD usa UUID; cambiado a GenerationType.UUID
- Login retornaba 500 porque audit INSERT tenia dni_usuario=null (usuario no autenticado aun); AuditService ahora tiene sobrecarga con dni explicito
- Usuarios de desarrollo con passwords en texto plano; reseed-dev.sql crea 3 sanitarios con BCrypt cost 12

Cambios:
- api/V5__fix_cargo_constraint.sql: normaliza cargo a SPECIALIST/NURSE
- api/AccionAuditoria.java: alineado con CHECK constraint BD
- api/AuditLog.java + AuditLogRepository.java: UUID id
- api/AuditService.java: sobrecarga registrar() con dniUsuario explicito
- api/AuthApplicationService.java: usa AccionAuditoria.LOGIN con dni explicito en login
- desktop/ApiClient.java: SLF4J logging, getBaseUrl(), override REHABIAPP_API_URL
- desktop/simplelogger.properties: nivel DEBUG para ApiClient, INFO global
- desktop/scripts/reseed-dev.sql + README.md: seed reproducible para dev

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>